fix(silverBox):fix silverBox overflows horizontally when appearing in mobile

--- a/public/src/css/silverBox.scss
+++ b/public/src/css/silverBox.scss
@@ -82,6 +82,7 @@ body {
 		width: -moz-fit-content;
 		width: fit-content;
 		height: fit-content;
+		overflow-x: hidden;
 	}
 
 	&.silverBox-top-right,
